Added autoadjusting screen, refactored a bit

--- a/chrome-extension/plugin/google.css
+++ b/chrome-extension/plugin/google.css
@@ -1,3 +1,6 @@
-.test {
-  background-color: green !important;
+.test::before {
+  content: '▶';
+  position: absolute;
+  margin-right: 25px;
+  left: -25px;
 }
